2010-03-04  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Marc-André Lureau

	* flumotion/component/consumers/applestreamer/hlsring.py:
	Append the request args also to the main playlist
	* flumotion/component/consumers/applestreamer/resources.py:
	Change log description: on a IP change the session is already
	in streamer.

2010-03-03  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Return from the chain function right after detecting a discontinuity.

2010-03-02  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Compute fragment duration based only on buffer timestamps, since
	buffer duration is almost never available, and titimestamp
	difference should be enough.

2010-03-02  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
	Count the keyframe buffer duration in the current fragment,
	instead of the one in the next fragment.

2010-03-01  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Fix log of request without session

2010-02-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_hls_ring.py:
	* flumotion/test/test_resource.py:
	Fix make check
	Added test for playlist with GKID argument in the request
	Add test for different sessions ID's (url and cookie)

2010-02-24  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/resources.py:
	Do not create several sessions for the same sessionID if the
	client doesn't use cookies

2010-02-23  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/applestreamer/hlsring.py:
	* flumotion/component/consumers/applestreamer/resources.py:
	Append the GET arguments to the playlist

2010-02-24  Marc-André Lureau  <mlureau@flumotion.com>
