@@ -1,3 +1,10 @@
+2010-04-20  Alvin Delagon  <adelagon@flumotion.com>
+
+	reviewed by: Xavier Martinez
+
+	* flumotion/component/muxers/mpegts/mpegts.py:
+	Send a meaningful error when 'mpegtsmux' is not installed.
+
 2010-03-04  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	reviewed by: Marc-André Lureau
